Fix off center rendering of the close button

--- a/src/components/CancelButton/CancelButton.css
+++ b/src/components/CancelButton/CancelButton.css
@@ -7,7 +7,7 @@
 	margin: 0;
 
 	border: none;
-	background: #C7C7CC url(/images/cancel.png) center center no-repeat;
+	background: #C7C7CC url(/images/cancel.png) 50% 49% no-repeat;
 	background-size: 50%;
 	border-radius: 50%;
 	z-index: 10;
